; ModuleID = '/home/carl/AnghaBench/freebsd/lib/msun/src/extr_s_scalbln.c_scalbln.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/msun/src/extr_s_scalbln.c_scalbln.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NMAX = common dso_local global i64 0, align 8
@NMIN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @scalbln(double %0, i64 %1) #0 {
  %3 = alloca double, align 8
  %4 = alloca i64, align 8
  store double %0, double* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load double, double* %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @NMAX, align 8
  %8 = icmp sgt i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i64, i64* @NMAX, align 8
  br label %23

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @NMIN, align 8
  %14 = icmp slt i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = load i64, i64* @NMIN, align 8
  br label %21

17:                                               ; preds = %11
  %18 = load i64, i64* %4, align 8
  %19 = trunc i64 %18 to i32
  %20 = sext i32 %19 to i64
  br label %21

21:                                               ; preds = %17, %15
  %22 = phi i64 [ %16, %15 ], [ %20, %17 ]
  br label %23

23:                                               ; preds = %21, %9
  %24 = phi i64 [ %10, %9 ], [ %22, %21 ]
  %25 = call double @scalbn(double %5, i64 %24)
  ret double %25
}

declare dso_local double @scalbn(double, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
